// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WasmBuilder-Utils: _encodeString 1`] = `"72,101,108,108,111,32,87,111,114,108,100"`;

exports[`WasmBuilder-Utils: encodeString 1`] = `"11,72,101,108,108,111,32,87,111,114,108,100"`;

exports[`WasmBuilder-Utils: ieee754-negative-float 1`] = `
Array [
  "0,0,0,0",
  "0,0,128,190",
  "0,0,0,191",
  "0,0,64,191",
  "0,0,128,191",
]
`;

exports[`WasmBuilder-Utils: ieee754-negative-ints 1`] = `
Array [
  "0,0,0,0",
  "0,0,122,195",
  "0,0,250,195",
  "0,128,59,196",
  "0,0,122,196",
]
`;

exports[`WasmBuilder-Utils: ieee754-positive-float 1`] = `
Array [
  "0,0,0,0",
  "0,0,128,62",
  "0,0,0,63",
  "0,0,64,63",
  "0,0,128,63",
]
`;

exports[`WasmBuilder-Utils: ieee754-positive-ints 1`] = `
Array [
  "0,0,0,0",
  "0,0,122,67",
  "0,0,250,67",
  "0,128,59,68",
  "0,0,122,68",
]
`;

exports[`WasmBuilder-Utils: signedLEB128-negative-ints 1`] = `
Array [
  "0",
  "134,126",
  "140,124",
  "146,122",
  "152,120",
]
`;

exports[`WasmBuilder-Utils: signedLEB128-positive-ints 1`] = `
Array [
  "0",
  "228,0",
  "200,1",
  "172,2",
  "144,3",
  "244,3",
  "216,4",
  "188,5",
  "160,6",
  "132,7",
  "232,7",
]
`;

exports[`WasmBuilder-Utils: unsignedLEB128-positive-ints 1`] = `
Array [
  "0",
  "100",
  "200,1",
  "172,2",
  "144,3",
  "244,3",
  "216,4",
  "188,5",
  "160,6",
  "132,7",
  "232,7",
]
`;

exports[`WasmBuilder-Utils: unsignedLEB128-zero 1`] = `"0"`;
